--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 <title>Shopping da Mulher - Produtos de Beleza</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
-<script defer src="https://unpkg.com/lucide@latest"></script>
-
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
@@ -17,7 +15,6 @@
 --rosa-fundo:#fff0f5;
 --dourado:#d4a017;
 }
-
 body{font-family:Poppins,sans-serif}
 
 .gradient-bg{
@@ -42,16 +39,10 @@ justify-content:center;
 overflow:hidden;
 box-shadow:0 6px 18px rgba(0,0,0,.08);
 }
-
 .logo-img{
 width:150%;
 height:auto;
 object-fit:contain;
-}
-
-@media(max-width:640px){
-.logo-wrap{width:70px;height:70px}
-.logo-img{width:160%}
 }
 
 .card-hover{
@@ -60,14 +51,6 @@ transition:.3s;
 .card-hover:hover{
 transform:translateY(-6px);
 box-shadow:0 20px 40px rgba(233,30,99,.15);
-}
-
-.whatsapp-float{
-animation:bounce 2s infinite;
-}
-@keyframes bounce{
-0%,100%{transform:translateY(0)}
-50%{transform:translateY(-8px)}
 }
 
 .hero-pattern{
@@ -116,14 +99,24 @@ Ver Produtos
 <section id="loja" class="py-16 px-4">
 <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8">
 
-<!-- PRODUTO 1 -->
+<!-- NOVO PRODUTO PRINCIPAL -->
 <div class="bg-white rounded-2xl p-6 card-hover">
-<img src="https://images.unsplash.com/photo-1522337360788-8b13dee7a37e?w=800&q=80" class="rounded-xl mb-4">
-<h3 class="text-xl font-bold mb-2">Progressiva Vegetal</h3>
-<p class="text-gray-600 mb-4">Alisa, reduz volume e dá brilho intenso.</p>
+<img src="https://i.imgur.com/PLACEHOLDER.jpg" class="rounded-xl mb-4">
+<h3 class="text-xl font-bold mb-2">Progressiva Vegetal Havana 500ml</h3>
+<p class="text-gray-600 mb-4">
+Sem formol. Liso perfeito, duradouro e brilho instantâneo.
+Indicado para todos os tipos de cabelo.
+</p>
 
-<a href="COLE_LINK_LOGZZ_PROGRESSIVA" class="block gradient-bg text-white py-3 rounded-lg mb-2 text-center font-semibold">Agendar Entrega (COD)</a>
-<a href="COLE_LINK_COINZZ_PROGRESSIVA" class="block border border-pink-500 py-3 rounded-lg text-center font-semibold text-pink-600">Comprar Online</a>
+<a href="https://entrega.logzz.com.br/pay/memn724go/progcreme170"
+class="block gradient-bg text-white py-3 rounded-lg mb-2 text-center font-semibold">
+Pague na Entrega
+</a>
+
+<a href="https://app.coinzz.com.br/checkout/prog-150-0/685c9cbbbd5ee"
+class="block border border-pink-500 py-3 rounded-lg text-center font-semibold text-pink-600">
+Pague Agora
+</a>
 </div>
 
 <!-- PRODUTO 2 -->
@@ -131,9 +124,6 @@ Ver Produtos
 <img src="https://images.unsplash.com/photo-1596462502278-27bfdc403348?w=800&q=80" class="rounded-xl mb-4">
 <h3 class="text-xl font-bold mb-2">Máscara Vita A</h3>
 <p class="text-gray-600 mb-4">Hidratação profunda e reposição de massa.</p>
-
-<a href="COLE_LINK_LOGZZ_VITAA" class="block gradient-bg text-white py-3 rounded-lg mb-2 text-center font-semibold">Agendar Entrega (COD)</a>
-<a href="COLE_LINK_COINZZ_VITAA" class="block border border-pink-500 py-3 rounded-lg text-center font-semibold text-pink-600">Comprar Online</a>
 </div>
 
 <!-- PRODUTO 3 -->
@@ -141,9 +131,6 @@ Ver Produtos
 <img src="https://images.unsplash.com/photo-1585751119414-ef2636f8aede?w=800&q=80" class="rounded-xl mb-4">
 <h3 class="text-xl font-bold mb-2">Óleo de Argan</h3>
 <p class="text-gray-600 mb-4">Nutrição intensa e brilho espelhado.</p>
-
-<a href="COLE_LINK_LOGZZ_ARGAN" class="block gradient-bg text-white py-3 rounded-lg mb-2 text-center font-semibold">Agendar Entrega (COD)</a>
-<a href="COLE_LINK_COINZZ_ARGAN" class="block border border-pink-500 py-3 rounded-lg text-center font-semibold text-pink-600">Comprar Online</a>
 </div>
 
 </div>
@@ -153,7 +140,7 @@ Ver Produtos
 <section id="politica" class="py-16 bg-white text-center px-4">
 <h2 class="text-3xl font-bold gradient-text mb-6">Política de Entrega</h2>
 <p class="max-w-2xl mx-auto text-gray-600">
-No modelo COD você paga somente quando recebe. É importante ter um adulto no local para receber e efetuar o pagamento.
+No modelo COD você paga somente quando recebe.
 </p>
 </section>
 
@@ -161,7 +148,7 @@ No modelo COD você paga somente quando recebe. É importante ter um adulto no l
 <section id="cod" class="py-16 bg-rosa-fundo text-center px-4">
 <h2 class="text-3xl font-bold gradient-text mb-6">O que é COD?</h2>
 <p class="max-w-2xl mx-auto text-gray-600">
-COD significa Pague na Entrega. Você faz o pedido e paga apenas quando o produto chega na sua casa.
+Você faz o pedido e paga apenas quando o produto chega.
 </p>
 </section>
 
@@ -171,16 +158,6 @@ COD significa Pague na Entrega. Você faz o pedido e paga apenas quando o produt
 <p class="text-gray-600 mb-4">flashstore@gmail.com</p>
 <p class="text-gray-600">(11) 94001-2239</p>
 </section>
-
-<!-- WHATSAPP -->
-<a href="https://wa.me/5511940012239?text=Olá%2C%20preciso%20de%20suporte"
-class="whatsapp-float fixed bottom-6 right-6 bg-green-500 text-white px-4 py-3 rounded-full shadow-lg">
-WhatsApp
-</a>
-
-<script>
-window.addEventListener("DOMContentLoaded",()=>{lucide.createIcons()})
-</script>
 
 </body>
 </html>
