--- a/index.html
+++ b/index.html
@@ -3,161 +3,201 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Shopping da Mulher - Produtos de Beleza</title>
+<title>Shopping da Mulher - Loja Oficial</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
-:root{
---rosa:#e91e63;
---rosa-escuro:#c2185b;
---rosa-fundo:#fff0f5;
---dourado:#d4a017;
-}
-body{font-family:Poppins,sans-serif}
-
-.gradient-bg{
-background:linear-gradient(135deg,var(--rosa),var(--rosa-escuro));
-}
-
-.gradient-text{
-background:linear-gradient(135deg,var(--rosa),var(--dourado));
--webkit-background-clip:text;
--webkit-text-fill-color:transparent;
-}
-
+body{font-family:Poppins,sans-serif;background:#f9fafb}
+.rosa{color:#e91e63}
+.bg-rosa{background:#e91e63}
+.border-rosa{border-color:#e91e63}
+.card{transition:.3s}
+.card:hover{transform:translateY(-5px);box-shadow:0 15px 35px rgba(0,0,0,.08)}
 .logo-wrap{
-width:95px;
-height:95px;
-background:#fff;
-border-radius:50%;
-border:4px solid var(--dourado);
-display:flex;
-align-items:center;
-justify-content:center;
-overflow:hidden;
-box-shadow:0 6px 18px rgba(0,0,0,.08);
-}
-.logo-img{
-width:150%;
-height:auto;
-object-fit:contain;
-}
-
-.card-hover{
-transition:.3s;
-}
-.card-hover:hover{
-transform:translateY(-6px);
-box-shadow:0 20px 40px rgba(233,30,99,.15);
-}
-
-.hero-pattern{
-background-image:url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23e91e63' fill-opacity='0.05'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4z'/%3E%3C/g%3E%3C/svg%3E");
-}
+width:90px;height:90px;background:#fff;border-radius:50%;
+border:4px solid #d4a017;display:flex;align-items:center;justify-content:center;
+overflow:hidden}
+.logo-wrap img{width:150%}
+.section{padding:60px 20px}
 </style>
 </head>
 
-<body class="bg-gray-50">
+<body>
 
 <!-- HEADER -->
-<header class="bg-white py-4 shadow-sm">
-<div class="max-w-7xl mx-auto flex items-center justify-between px-4">
-
+<header class="bg-white shadow-sm py-4">
+<div class="max-w-7xl mx-auto px-4 flex items-center justify-between">
 <div class="flex items-center gap-4">
 <div class="logo-wrap">
-<img src="https://recebaepagueemcasa.github.io/shopping-da-mulher/logotipo.png" class="logo-img">
+<img src="https://recebaepagueemcasa.github.io/shopping-da-mulher/logotipo.png">
 </div>
-<div class="hidden md:block text-sm text-gray-500">Beleza Feminina com Segurança</div>
+<h1 class="text-xl font-bold rosa">Shopping da Mulher</h1>
 </div>
 
-<nav class="hidden md:flex gap-6 font-semibold text-gray-600">
+<nav class="hidden md:flex gap-6 text-gray-600 font-semibold">
 <a href="#loja" class="hover:text-pink-600">Loja</a>
 <a href="#politica" class="hover:text-pink-600">Política</a>
 <a href="#cod" class="hover:text-pink-600">Sobre COD</a>
 <a href="#contato" class="hover:text-pink-600">Contato</a>
 </nav>
-
 </div>
 </header>
 
 <!-- HERO -->
-<section class="hero-pattern bg-rosa-fundo py-16 text-center px-4">
-<h1 class="text-4xl md:text-6xl font-bold mb-6">
-Shopping da Mulher — <span class="gradient-text">Beleza & Cuidado</span>
-</h1>
-<p class="text-xl text-gray-600 mb-8">
-Pague só quando receber (COD) ou compre online com segurança.
+<section class="section text-center bg-pink-50">
+<h2 class="text-4xl font-bold mb-4">
+Beleza Profissional com Segurança
+</h2>
+<p class="text-gray-600 mb-6">
+Pague na entrega ou compre online com desconto especial.
 </p>
-<a href="#loja" class="gradient-bg text-white px-10 py-4 rounded-full font-bold">
+<a href="#loja" class="bg-rosa text-white px-8 py-3 rounded-full font-semibold">
 Ver Produtos
 </a>
 </section>
 
-<!-- PRODUTOS -->
-<section id="loja" class="py-16 px-4">
-<div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8">
+<!-- LOJA -->
+<section id="loja" class="section">
+<div class="max-w-7xl mx-auto grid gap-8 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
 
-<!-- NOVO PRODUTO PRINCIPAL -->
-<div class="bg-white rounded-2xl p-6 card-hover">
-<img src="https://i.imgur.com/PLACEHOLDER.jpg" class="rounded-xl mb-4">
-<h3 class="text-xl font-bold mb-2">Progressiva Vegetal Havana 500ml</h3>
-<p class="text-gray-600 mb-4">
+<!-- PRODUTO 1 COMPLETO -->
+<div class="bg-white rounded-2xl p-5 border border-gray-200 card">
+
+<img src="https://recebaepagueemcasa.github.io/shopping-da-mulher/1-pvh.png" class="rounded-xl mb-4">
+
+<h3 class="font-bold text-lg mb-2">
+1 Frasco da Progressiva Vegetal Havana 500ml
+</h3>
+
+<p class="text-sm text-gray-600 mb-2">
 Sem formol. Liso perfeito, duradouro e brilho instantâneo.
-Indicado para todos os tipos de cabelo.
+Indicado para todos os tipos de cabelos.
 </p>
 
+<div class="text-yellow-400 text-sm mb-1">★★★★★ <span class="text-gray-700 font-semibold">(4.9/5.0)</span></div>
+<div class="text-green-600 text-sm font-semibold mb-2">
++<span id="contadorVendas">1549</span> vendidos
+</div>
+
+<div class="mb-4">
+<span class="line-through text-gray-400 mr-2">R$ 250,00</span>
+<span class="text-xl font-bold rosa">R$ 170,00</span>
+</div>
+
 <a href="https://entrega.logzz.com.br/pay/memn724go/progcreme170"
-class="block gradient-bg text-white py-3 rounded-lg mb-2 text-center font-semibold">
+class="block bg-rosa text-white py-2 rounded-lg text-center mb-2">
 Pague na Entrega
 </a>
 
 <a href="https://app.coinzz.com.br/checkout/prog-150-0/685c9cbbbd5ee"
-class="block border border-pink-500 py-3 rounded-lg text-center font-semibold text-pink-600">
+class="block border border-rosa rosa py-2 rounded-lg text-center mb-2">
 Pague Agora
 </a>
+
+<button onclick="toggleDesc(1)"
+class="w-full bg-gray-100 py-2 rounded-lg text-sm font-semibold">
+Descrição
+</button>
+
+<div id="desc1" class="hidden mt-3 text-sm text-gray-600">
+Descrição completa da progressiva.
 </div>
 
-<!-- PRODUTO 2 -->
-<div class="bg-white rounded-2xl p-6 card-hover">
-<img src="https://images.unsplash.com/photo-1596462502278-27bfdc403348?w=800&q=80" class="rounded-xl mb-4">
-<h3 class="text-xl font-bold mb-2">Máscara Vita A</h3>
-<p class="text-gray-600 mb-4">Hidratação profunda e reposição de massa.</p>
 </div>
 
-<!-- PRODUTO 3 -->
-<div class="bg-white rounded-2xl p-6 card-hover">
-<img src="https://images.unsplash.com/photo-1585751119414-ef2636f8aede?w=800&q=80" class="rounded-xl mb-4">
-<h3 class="text-xl font-bold mb-2">Óleo de Argan</h3>
-<p class="text-gray-600 mb-4">Nutrição intensa e brilho espelhado.</p>
+<!-- PRODUTOS 2 A 9 GENÉRICOS -->
+<script>
+for(let i=2;i<=9;i++){
+document.write(`
+<div class="bg-white rounded-2xl p-5 border border-gray-200 card">
+
+<img src="https://via.placeholder.com/500x500?text=Produto+${i}" class="rounded-xl mb-4">
+
+<h3 class="font-bold text-lg mb-2">
+Nome do Produto ${i}
+</h3>
+
+<p class="text-sm text-gray-600 mb-4">
+Breve descrição do produto.
+</p>
+
+<div class="mb-4">
+<span class="line-through text-gray-400 mr-2">R$ 199,00</span>
+<span class="text-xl font-bold rosa">R$ 129,00</span>
 </div>
+
+<a href="#" class="block bg-rosa text-white py-2 rounded-lg text-center mb-2">
+Pague na Entrega
+</a>
+
+<a href="#" class="block border border-rosa rosa py-2 rounded-lg text-center mb-2">
+Pague Agora
+</a>
+
+<button onclick="toggleDesc(${i})"
+class="w-full bg-gray-100 py-2 rounded-lg text-sm font-semibold">
+Descrição
+</button>
+
+<div id="desc${i}" class="hidden mt-3 text-sm text-gray-600">
+Descrição do Produto ${i}.
+</div>
+
+</div>
+`)
+}
+</script>
 
 </div>
 </section>
 
 <!-- POLÍTICA -->
-<section id="politica" class="py-16 bg-white text-center px-4">
-<h2 class="text-3xl font-bold gradient-text mb-6">Política de Entrega</h2>
-<p class="max-w-2xl mx-auto text-gray-600">
-No modelo COD você paga somente quando recebe.
+<section id="politica" class="section bg-white text-center">
+<h2 class="text-2xl font-bold mb-4 rosa">Política de Entrega</h2>
+<p class="text-gray-600 max-w-2xl mx-auto">
+No modelo COD você paga somente quando recebe o produto em casa.
+Frete grátis disponível nas modalidades.
 </p>
 </section>
 
 <!-- COD -->
-<section id="cod" class="py-16 bg-rosa-fundo text-center px-4">
-<h2 class="text-3xl font-bold gradient-text mb-6">O que é COD?</h2>
-<p class="max-w-2xl mx-auto text-gray-600">
-Você faz o pedido e paga apenas quando o produto chega.
+<section id="cod" class="section bg-pink-50 text-center">
+<h2 class="text-2xl font-bold mb-4 rosa">O que é COD?</h2>
+<p class="text-gray-600 max-w-2xl mx-auto">
+COD significa Pague na Entrega. Você agenda e paga somente quando o produto chegar.
 </p>
 </section>
 
 <!-- CONTATO -->
-<section id="contato" class="py-16 bg-white text-center px-4">
-<h2 class="text-3xl font-bold gradient-text mb-6">Fale Conosco</h2>
-<p class="text-gray-600 mb-4">flashstore@gmail.com</p>
-<p class="text-gray-600">(11) 94001-2239</p>
+<section id="contato" class="section text-center bg-white">
+<h2 class="text-2xl font-bold mb-4 rosa">Fale Conosco</h2>
+<p class="text-gray-600">flashstore@gmail.com</p>
+<p class="text-gray-600 mb-4">(11) 94001-2239</p>
+
+<a href="https://wa.me/5511940012239?text=Olá%2C%20preciso%20de%20suporte."
+class="bg-green-500 text-white px-6 py-2 rounded-lg">
+Falar no WhatsApp
+</a>
 </section>
+
+<!-- FOOTER -->
+<footer class="bg-rosa text-white text-center py-6">
+© 2026 Shopping da Mulher. Todos os direitos reservados.
+</footer>
+
+<script>
+function toggleDesc(id){
+document.getElementById("desc"+id).classList.toggle("hidden")
+}
+
+let contador = 1549;
+setInterval(()=>{
+contador += Math.floor(Math.random()*3)+1;
+document.getElementById("contadorVendas").innerText=contador;
+},10000)
+</script>
 
 </body>
 </html>
